--- a/css/style.css
+++ b/css/style.css
@@ -907,3 +907,96 @@ video {
   grid-column: 1 / span 2;
   grid-row: 3 / span 1;
 }
+
+/** ikki68 gallery */
+.ikki68-grid-container {
+  margin-top: 5em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+  grid-template-rows: repeat(7, 1fr);
+  gap: 0.5rem;
+  justify-content: center;
+}
+
+/* ikki68 mobile viewport */
+.ikki68-item-1 {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+}
+
+.ikki68-item-2 {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+}
+
+.ikki68-item-3 {
+  grid-column: 1 / span 1;
+  grid-row: 3 / span 1;
+}
+
+.ikki68-item-4 {
+  grid-column: 1 / span 1;
+  grid-row: 4 / span 1;
+}
+
+.ikki68-item-5 {
+  grid-column: 1 / span 1;
+  grid-row: 5 / span 1;
+}
+
+.ikki68-item-6 {
+  grid-column: 1 / span 1;
+  grid-row: 6 / span 1;
+}
+
+.ikki68-item-7 {
+  grid-column: 1 / span 1;
+  grid-row: 7 / span 1;
+}
+
+/* ikki68 desktop viewport */
+@media (min-width: 600px) {
+  .ikki68-grid-container {
+    margin-top: 5em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(0px, 500px));
+    grid-template-rows: repeat(4, 1fr);
+    gap: 0.5rem;
+    justify-content: center;
+  }
+
+  .ikki68-item-1 {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+  }
+
+  .ikki68-item-2 {
+    grid-column: 2 / span 2;
+    grid-row: 1 / span 1;
+  }
+
+  .ikki68-item-3 {
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
+  }
+
+  .ikki68-item-4 {
+    grid-column: 3 / span 1;
+    grid-row: 2 / span 1;
+  }
+
+  .ikki68-item-5 {
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
+  }
+
+  .ikki68-item-6 {
+    grid-column: 2 / span 2;
+    grid-row: 3 / span 1;
+  }
+
+  .ikki68-item-7 {
+    grid-column: 1 / span 3;
+    grid-row: 4 / span 1;
+  }
+}
