--- a/css/style.css
+++ b/css/style.css
@@ -1000,3 +1000,229 @@ video {
     grid-row: 4 / span 1;
   }
 }
+
+/** freebird gallery */
+.freebird-grid-container {
+  margin-top: 5em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+  grid-template-rows: repeat(8, 1fr);
+  gap: 0.5rem;
+  justify-content: center;
+}
+
+/* freebird mobile viewport */
+.freebird-item-1 {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+}
+
+.freebird-item-2 {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+}
+
+.freebird-item-3 {
+  grid-column: 1 / span 1;
+  grid-row: 3 / span 1;
+}
+
+.freebird-item-4 {
+  grid-column: 1 / span 1;
+  grid-row: 4 / span 1;
+}
+
+.freebird-item-5 {
+  grid-column: 1 / span 1;
+  grid-row: 5 / span 1;
+}
+
+.freebird-item-6 {
+  grid-column: 1 / span 1;
+  grid-row: 6 / span 1;
+}
+
+.freebird-item-7 {
+  grid-column: 1 / span 1;
+  grid-row: 7 / span 1;
+}
+
+.freebird-item-8 {
+  grid-column: 1 / span 1;
+  grid-row: 8 / span 1;
+}
+
+/* freebird desktop viewport */
+@media (min-width: 600px) {
+  .freebird-grid-container {
+    margin-top: 5em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(0px, 500px));
+    grid-template-rows: repeat(4, 1fr);
+    gap: 0.5rem;
+    justify-content: center;
+  }
+
+  .freebird-item-1 {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+  }
+
+  .freebird-item-2 {
+    grid-column: 2 / span 2;
+    grid-row: 1 / span 1;
+  }
+
+  .freebird-item-3 {
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 1;
+  }
+
+  .freebird-item-4 {
+    grid-column: 3 / span 1;
+    grid-row: 2 / span 1;
+  }
+
+  .freebird-item-5 {
+    grid-column: 1 / span 1;
+    grid-row: 3 / span 1;
+  }
+
+  .freebird-item-6 {
+    grid-column: 2 / span 2;
+    grid-row: 3 / span 1;
+  }
+
+  .freebird-item-7 {
+    grid-column: 1 / span 2;
+    grid-row: 4 / span 1;
+  }
+
+  .freebird-item-8 {
+    grid-column: 3 / span 1;
+    grid-row: 4 / span 1;
+  }
+}
+
+/** clunker gallery */
+.clunker-grid-container {
+  margin-top: 5em;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
+  grid-template-rows: repeat(10, 1fr);
+  gap: 0.5rem;
+  justify-content: center;
+}
+
+/* clunker mobile viewport */
+.clunker-item-1 {
+  grid-column: 1 / span 1;
+  grid-row: 1 / span 1;
+}
+
+.clunker-item-2 {
+  grid-column: 1 / span 1;
+  grid-row: 2 / span 1;
+}
+
+.clunker-item-3 {
+  grid-column: 1 / span 1;
+  grid-row: 3 / span 1;
+}
+
+.clunker-item-4 {
+  grid-column: 1 / span 1;
+  grid-row: 4 / span 1;
+}
+
+.clunker-item-5 {
+  grid-column: 1 / span 1;
+  grid-row: 5 / span 1;
+}
+
+.clunker-item-6 {
+  grid-column: 1 / span 1;
+  grid-row: 6 / span 1;
+}
+
+.clunker-item-7 {
+  grid-column: 1 / span 1;
+  grid-row: 7 / span 1;
+}
+
+.clunker-item-8 {
+  grid-column: 1 / span 1;
+  grid-row: 8 / span 1;
+}
+
+.clunker-item-9 {
+  grid-column: 1 / span 1;
+  grid-row: 8 / span 1;
+}
+
+.clunker-item-10 {
+  grid-column: 1 / span 1;
+  grid-row: 8 / span 1;
+}
+
+/* clunker desktop viewport */
+@media (min-width: 600px) {
+  .clunker-grid-container {
+    margin-top: 5em;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(0px, 500px));
+    grid-template-rows: repeat(5, 1fr);
+    gap: 0.5rem;
+    justify-content: center;
+  }
+
+  .clunker-item-1 {
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
+  }
+
+  .clunker-item-2 {
+    grid-column: 2 / span 2;
+    grid-row: 1 / span 2;
+  }
+
+  .clunker-item-3 {
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+  }
+
+  .clunker-item-4 {
+    grid-column: 1 / span 2;
+    grid-row: 3 / span 1;
+  }
+
+  .clunker-item-5 {
+    grid-column: 3 / span 1;
+    grid-row: 3 / span 1;
+  }
+
+  .clunker-item-6 {
+    grid-column: 1 / span 1;
+    grid-row: 4 / span 1;
+  }
+
+  .clunker-item-7 {
+    grid-column: 2 / span 1;
+    grid-row: 4 / span 1;
+  }
+
+  .clunker-item-8 {
+    grid-column: 3 / span 1;
+    grid-row: 4 / span 1;
+  }
+
+  .clunker-item-9 {
+    grid-column: 1 / span 1;
+    grid-row: 5 / span 1;
+  }
+
+  .clunker-item-10 {
+    grid-column: 2 / span 2;
+    grid-row: 5 / span 1;
+  }
+}
