--- a/css/style.css
+++ b/css/style.css
@@ -469,7 +469,9 @@ nav {
   margin-top: 5em;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 500px));
-  grid-template-rows: repeat(6, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  /* omitting clunker and bm65 */
+  /* grid-template-rows: repeat(6, 1fr); */
   gap: 0.5rem;
   justify-content: center;
 }
@@ -486,7 +488,7 @@ nav {
   grid-row: 1 / span 1;
 }
 
-/* bm65 */
+/* was bm65; now freebird tkl */
 .grid-item-2 {
   grid-column: 1 / span 1;
   grid-row: 2 / span 1;
@@ -522,7 +524,9 @@ nav {
     margin-top: 5em;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(0px, 500px));
-    grid-template-rows: repeat(4, 1fr);
+    /* omitting clunker and bm65 */
+    grid-template-rows: repeat(3, 1fr);
+    /* grid-template-rows: repeat(4, 1fr); */
     gap: 0.5rem;
     justify-content: center;
   }
@@ -712,6 +716,20 @@ nav {
   margin-left: auto;
   margin-right: auto;
   box-shadow: var(--bs);
+}
+
+/* keebcompanion styling */
+#kc_logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: var(--bs);
+  border-radius: 20px;
+}
+
+.app-titles {
+  margin-top: 40px;
+  font-size: 2.5rem;
 }
 
 /* class for putting image at the center of the section */
